2003-08-01  Stefan Kain  <stefan.kain@freenet.de>

	* realelem.d: translated all comments

2003-07-31  Sam Steingold  <sds@gnu.org>

	* stream.d (open_file_stream_handle): use ChannelStream_ihandle()
	* genclisph.d (OS_filestream_error): export

2003-07-31  Sam Steingold  <sds@gnu.org>

	these days *.h files contain good prototypes - do not duplicate them
	* foreign1.lisp (*output-c-functions*, *output-c-variables*):
	new variables, default to NIL
	(finalize-coutput-file): do not write *FUNCTION-LIST* (resp.
	*VARIABLE-LIST*) to *COUTPUT-STREAM* when
	*OUTPUT-C-FUNCTIONS* (resp. *OUTPUT-C-VARIABLES*) is NIL

2003-07-31  Sam Steingold  <sds@gnu.org>

	* misc.d (GETENV, clisp_setenv): use `environ', not win32-specific
	API, but declare `environ' outside the function scope for mingw/g++

2003-07-30  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c: all *-INTERNAL functions
	call structure BOA constructors (thus they are not INTERNAL)
	* modules/syscalls/posix.lisp: all structures have BOA
	constructors, removed the wrappers

2003-07-30  Sam Steingold  <sds@gnu.org>

	* genclisph.d (charp): enabled
	* modules/syscalls/calls.c (FILE-INFO, MAKE-SHORTCUT)
	(SHORTCUT-INFO) [WIN32_NATIVE, UNIX_CYGWIN32]: new functions
	* modules/syscalls/posix.lisp (file-info, shortcut-info)
	[WIN32_NATIVE, UNIX_CYGWIN32]: new structures
	* install.bat: run the full linking set
	* install.lisp: create a shortcut

2003-07-29  Sam Steingold  <sds@gnu.org>

	* genclisph.d (to_time_t_) [UNIX_CYGWIN32]: export
	* modules/dirkey/dirkey.c (to_time_t_) [UNIX_CYGWIN32]: moved to...
	* unixaux.d (to_time_t_) [UNIX_CYGWIN32]: here

2003-07-29  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): when non-interactive, guard LOAD for "-i" with
	SYS::BATCHMODE-ERRORS to avoid infinite loop on error

2003-07-28  Sam Steingold  <sds@gnu.org>

	pushSTACK(listof()) and STACK_1=listof() are illegal because
	listof() (and vectorof() &c) modify the STACK,
	so the whole expression becomes undefined!