@@ -23,7 +23,7 @@
 <!ENTITY dlopen "<ulink url='&unix-f;/dlopen.html'><function>dlopen</function></ulink>">
 <!ENTITY dlsym "<ulink url='&unix-f;/dlsym.html'><function>dlsym</function></ulink>">
 <!ENTITY dup "<ulink url='&unix-f;/dup.html'><function>dup/dup2</function></ulink>">
-<!ENTITY flock "<ulink url='&unix-f;/flockfile.html'><function>flock</function></ulink>">
+<!ENTITY fcntl "<ulink url='&unix-f;/fcntl.html'><function>fcntl</function></ulink>">
 <!ENTITY free "<ulink url='&unix-f;/free.html'><function>free</function></ulink>">
 <!ENTITY fstat "<ulink url='&unix-f;/fstat.html'><function>fstat</function></ulink>">
 <!ENTITY gethostbyaddr "<ulink url='&unix-f;/gethostbyaddr.html'><function>gethostbyaddr</function></ulink>">
@@ -56,6 +56,7 @@
 <!ENTITY unix-b "&unix-top;/basedefs">
 <!ENTITY regex-h "<ulink url='&unix-b;/regex.h.html'><filename>regex.h</filename></ulink>">
 <!ENTITY stdlib-h "<ulink url='&unix-b;/stdlib.h.html'><filename>stdlib.h</filename></ulink>">
+<!ENTITY fcntl-h "<ulink url='&unix-b;/fcntl.h.html'><filename>fcntl.h</filename></ulink>">
 <!ENTITY env-var "<ulink url='&unix-b;/xbd_chap08.html'>environment variable</ulink>">
 <!ENTITY file-des "<ulink url='&unix-b;/xbd_chap03.html#tag_03_165'>file descriptor</ulink>">
 
